src/modules/shared/components/ProductsList/ProductsList.module.scss
@import '../../variables';
@import '../../mixins';
@import '../../fonts';
@import '../../animations';

.productsList {
  grid-column: 1 / -1;
  display: grid;
  gap: 40px;
  grid-column-gap: 16px;
  grid-template-columns: repeat($grid-columns, 1fr);
  padding-top: 24px;
}

.productCard {
  grid-column: span 6;
}

@include on-tablet {
  .productsList {
    grid-template-columns: repeat($grid-columns-tablet, 1fr);
  }
}

@include on-mobile {
  .productsList {
    grid-template-columns: repeat($grid-columns-mobile, 4fr);
  }

  .productCard {
    grid-column: span 4;
  }
}

